# Sunbeam

./: .gitignore  Cargo.toml  README.md
crates/sunbeam-agent-x11/: Cargo.toml
crates/sunbeam-agent-x11/src/: main.rs
crates/sunbeam-client/: Cargo.toml
crates/sunbeam-client/src/: main.rs
crates/sunbeam-common/: Cargo.toml
crates/sunbeam-common/src/: frame.rs  input.rs  lib.rs  protocol.rs  session.rs  transport.rs
crates/sunbeam-ctl/: Cargo.toml
crates/sunbeam-ctl/src/: main.rs
crates/sunbeam-gamestream/: Cargo.toml
crates/sunbeam-gamestream/src/: lib.rs  nvhttp.rs  rtsp.rs  sdp.rs  session.rs  udp_control.rs  udp_video.rs
crates/sunbeam-host/: Cargo.toml
crates/sunbeam-host/src/: main.rs
crates/sunbeam-video/: Cargo.toml
crates/sunbeam-video/src/: encoder.rs  ffmpeg_h264.rs  lib.rs  types.rs
docs/: architecture.md
