[package]
name = "sunbeam-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
sunbeam-common = { path = "../sunbeam-common" }
tracing.workspace = true
tracing-subscriber.workspace = true
