[package]
name = "sunbeam-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
sunbeam-common = { path = "../sunbeam-common" }
tracing.workspace = true
tracing-subscriber.workspace = true
